# DE374h_WP1

./: .gitignore  CLAUDE.md  LICENSE  README.md  edt_polytope_availability.csv  pyproject.toml
Scripts/: DE374h_download.py  c_api_request.py  c_directories.py  create_zarr.job  create_zarr.py  crontab_edt.job  crontab_edt_hist.job  crontab_ifs.job  crontab_ifs_hist.job  mars_check.ipynb  mars_check.job  polytope_check.ipynb  show_zarr.py
