[project]
name = "de374-lot2"
version = "0.1.0"
description = "DE374h data gathering and management project"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "earthkit==0.13.2",
    "eccodes==2.44.0",
    "ipykernel==7.1.0",
    "numcodecs<0.13.0",
    "pandas==2.3.3",
    "pygrib==2.1.8",
    "zarr==2.18",
    "numcodecs>=0.12.0,<0.13.0",
    "papermill>=2.6.0",
]
